--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -60,6 +61,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.5.1'
     implementation "androidx.paging:paging-runtime-ktx:3.1.0"
     implementation 'androidx.room:room-paging:2.4.0-rc01'
+
+    implementation "androidx.multidex:multidex:2.0.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
